# ESP32_MultiSensor_IoT_Logger

./: .gitignore  README.md  sdkconfig
.github/workflows/: build_check.yml
main/: CMakeLists.txt  main.c
main/inc/: button.h  dht11.h  ds3231.h  i2c.helper.h  lcd.h  mpu6050.h  sd_card.h  sensor_data.h  wifi_manager.h
main/src/: button.c  dht11.c  dht11_task.c  ds3231.c  ds3231_task.c  i2c_helper.c  lcd.c  lcd_task.c  mpu6050.c  mpu6050_task.c  sd_card.c  sd_task.c  wifi_manager.c  wifi_task.c
