
idf_component_register(
    SRCS 
    	"main.c"
    	"src/dht11.c"
    	"src/dht11_task.c"
    	"src/i2c_helper.c"
    	"src/mpu6050.c"
    	"src/mpu6050_task.c"
    	"src/ds3231.c"
        "src/ds3231_task.c"
        "src/lcd.c"
        "src/lcd_task.c"
        "src/button.c"
        "src/sd_card.c"
		"src/sd_task.c"
    INCLUDE_DIRS 
    	"."
    	"inc"
)
